CSS fix to trim whitespace

--- a/src/SFA.DAS.LevyTransferMatching.Web/wwwroot/css/app.css
+++ b/src/SFA.DAS.LevyTransferMatching.Web/wwwroot/css/app.css
@@ -98,6 +98,7 @@
     float: left;
     margin-right: .3em;
     position: relative;
+    display: flex;
 }
 
 .app-dl-icon-list__title:after {
